Fix spacing error

--- a/css/main.css
+++ b/css/main.css
@@ -51,13 +51,7 @@ img {
 }
 
 @media only screen and (min-width: 38em) {
-
-
 }
 
 @media only screen and (min-width: 60em) {
-
-  {
-
-  }
 }
